Enhance image resizing functionality by including border dimensions in calculations, ensuring accurate resizing. Update toolbar options to disable alt text and link buttons for video elements. Improve UI elements with new submenu arrow styles and adjust button layouts for better user experience.

--- a/src/ResizePlugin.less
+++ b/src/ResizePlugin.less
@@ -434,3 +434,11 @@
 .quill-resize-btn-danger:hover {
   background-color: #d32f2f;
 }
+
+.submenu-arrow{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+ 
+}
